[package]
name = "card-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.1", features = ["jpeg", "png"] }
bevy-inspector-egui = { version = "0.30.0" }
bevy_sprite3d = "4.0.0"
bevy_tweening = "0.12"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "case"
path = "src/bin/case.rs"
