[package]
name = "card-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.1", features = ["jpeg", "png"] }
bevy-inspector-egui = { version = "0.30.0" }
bevy_tween = "0.7.0"
rand = "0.9.0-beta.1"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "case"
path = "src/bin/case.rs"

[[bin]]
name = "tween"
path = "src/bin/tween.rs"